[gd_scene load_steps=5 format=3 uid="uid://bjj47p2akx6q5"]

[ext_resource type="Script" path="res://prog_54c.gd" id="1_0fskf"]
[ext_resource type="Theme" uid="uid://bkhm7mblj1udd" path="res://BigFont.tres" id="2_crrxw"]
[ext_resource type="Theme" uid="uid://os4yjvatm7cf" path="res://Button.tres" id="3_70fhp"]

[sub_resource type="Theme" id="Theme_x2iuh"]
default_font_size = 40

[node name="Prog_54c" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 7.0
offset_right = 2.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0fskf")

[node name="Radius" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 156.0
offset_top = 96.0
offset_right = 1031.0
offset_bottom = 174.0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 244.0
offset_top = 21.0
offset_right = 869.0
offset_bottom = 91.0
theme = ExtResource("2_crrxw")
text = "Radius"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Area" type="Label" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 241.0
offset_right = 831.0
offset_bottom = 372.0
theme = SubResource("Theme_x2iuh")
text = "Area:"

[node name="Circumference" type="Label" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 373.0
offset_right = 829.0
offset_bottom = 504.0
theme = SubResource("Theme_x2iuh")
text = "Circumfrence:"

[node name="Calc" type="Button" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 546.0
offset_right = 253.0
offset_bottom = 646.0
theme = ExtResource("3_70fhp")
text = "Calculate"

[node name="Clear" type="Button" parent="."]
layout_mode = 0
offset_left = 469.0
offset_top = 542.0
offset_right = 715.0
offset_bottom = 642.0
theme = ExtResource("3_70fhp")
text = "Clear"

[node name="Quit" type="Button" parent="."]
layout_mode = 0
offset_left = 909.0
offset_top = 540.0
offset_right = 1155.0
offset_bottom = 640.0
theme = ExtResource("3_70fhp")
text = "Quit"

[connection signal="pressed" from="Calc" to="." method="_on_calc_pressed"]
[connection signal="pressed" from="Clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
